--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,6 +1,4 @@
-<div class="header">
-  <h3 class="text-muted">drjova.github.io</h3>
-</div>
+
 
 <div class="jumbotron">
   <h1>'Allo, 'Allo!</h1>
@@ -15,9 +13,24 @@
         </div>
     </div>
     <hr />
-    <ul ng-hide="httperror" >
-        <li ng-repeat="commit in commits | filter:query:note" >
-            <p>{{commit.commit.message}}</p>
+    
+    <ul ng-hide="httperror" class="list-unstyled">
+        <li ng-repeat="commit in commits | filter:query" >
+            <h4>{{commit.commit.title}}</h4>
+            <span class="glyphicon glyphicon-user"></span> <a href="{{commit.author.html_url}}" target="_blank">{{commit.author.login}}</a>
+            <span class="glyphicon glyphicon-barcode"></span> <a href="{{commit.url}}" target="_blank">{{commit.sha | split}}</a>
+            <ul ng-show="(commit.commit.note).length">
+                <li ng-repeat="note in commit.commit.note">
+                    {{note | clean}}
+                </li>
+            </ul>
+            <a class="" href="javascript:void(0)" ng-click="showDetails = ! showDetails" >show commit message</a>
+            <div ng-show="showDetails" ng-bind-html-unsafe="commit.commit.message">
+                <div class="well  well-sm">
+                {{commit.commit.message}}
+                </div>
+            </div>
+            <hr />
         </li>
     </ul>
     <div ng-show="httperror">
@@ -25,7 +38,14 @@
             Sorry an {{httperror.message}}
         </div>
     </div>
-
+    <div ng-hide="(commits|filter:query).length">
+        <div class="alert alert-warning">
+            Sorry no results
+        </div>
+    </div>
+    <div class="" ng-show="(commits|filter:query).length">
+        <p class="mute text-center">{{commits.length}} Notes</p>
+    </div>
 <div class="footer">
-    <p><span class="glyphicon glyphicon-heart"></span> from Invenio Team  </p>
+    <p>With <span class="glyphicon glyphicon-heart"></span> from Invenio Team  </p>
 </div>
